# convexima

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: solve_mps.rs
src/: consts.rs  datatype.rs  helpers.rs  lib.rs  problem.rs  solution.rs  solver.rs  solvers.rs  sparse.rs
src/helpers/: helpers.rs  msp.rs
src/solvers/: revised_dual_simplex.rs
src/solvers/revised_dual_simplex/: basis_solver.rs  eta_matrices.rs  lu.rs  pivot.rs
src/solvers/revised_dual_simplex/lu/: gplu.rs  supernodal_lu.rs
src/solvers/revised_dual_simplex/pivot/: harris_devex.rs
tests/: integration_test.rs  lpopt_test.rs
