[package]
name = "convexima"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sprs = "0.10"
log = "*"

[dev-dependencies]
rand = "*"
rand_pcg = "*"
ndarray = "*"
env_logger = "*"
procspawn = { version = "*", features = ["test-support"] }
